--- a/styles.css
+++ b/styles.css
@@ -40,13 +40,17 @@ h1 {
 }
 
 a {
+    text-decoration: none;
+}
+
+#list a {
     color: #5f5f5f;
     text-decoration: none;
 }
-a:hover {
+#list a:hover {
     color: #000;
 }
-a.clear, a.clear:link, a.clear:visited {
+#list a.clear, a.clear:link, a.clear:visited {
     color: #666;
     padding: 2px 0;
     font-weight: 400;
@@ -180,8 +184,4 @@ td a {
 footer {
     font-size:12px;
     text-align:center;
-}
-footer a {
-    text-decoration: underline;
-    color:#990012;
 }
